test/fails/bad_casts/as1.lgl
void main() {
    float[4] v = [1., 2., 3., 4.];
    auto fail = v as! float[3]; // Not a subtype
}